--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -11,11 +11,17 @@
  * implied. See the License for the specific language governing permissions and
  * limitations under the License.
  -->
-
-<div class="violations-table" [class.admin-rights]='adminAccess'>
-    <div class="flex flex-align-center" style="padding-bottom: 18px; " *ngIf="backButtonRequired">
-        <img class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
-        <h1 class="title-text nowrap-ellipsis">{{pageTitle}}</h1>
+ <div class="violations-table" [class.admin-rights]='adminAccess'>
+     <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding-bottom: 18px">
+        <app-breadcrumb *ngIf="breadcrumbLinks.length>0" [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+     </div>
+    <div class="violations-header">
+        <div class="flex flex-align-center">
+            <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+            <!-- <h1 class="title-text nowrap-ellipsis">{{ breadcrumbPresent }}</h1> -->
+            <span class="title">{{ breadcrumbPresent }}</span>
+        </div>
+        <span class="description">View violations that run against each policy. </span>
     </div>
     <div class="wrapper">
         <!-- <div [class.loader]="tableData.length==0 && tableErrorMessage==''"></div>
