--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
@@ -13,12 +13,9 @@
  -->
 
 <div class="policy-knowledgebase-wrapper flex flex-between flex-col">
-    <div class="flex flex-col">
-        <app-breadcrumb *ngIf='currentPageLevel === 1'></app-breadcrumb>
-        <div class="floating-widgets-header pk-header flex flex-between">
-            <div>
-                <app-back-navigation></app-back-navigation>
-            </div>
+    <div class="policy-header">
+        <div class="title">
+            {{breadcrumbPresent}}
         </div>
     </div>
     <div class="type-count-container">
