--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.css
@@ -23,6 +23,11 @@
     padding-bottom: 18px;
 }
 
+.arrow-img{
+    height: 1.4em; 
+    align-self: baseline;
+}
+
 .violations-header .title {
     box-sizing: border-box;
     display: flex;
