--- a/webapp/src/app/pacman-features/modules/compliance/violations-card/violations-card.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/violations-card/violations-card.component.html
@@ -5,15 +5,15 @@
         <img src="/assets/icons/violations-{{card.name}}.svg" alt="" >
       </div>
       <div class="violations-content flex flex-col">
-        <div class="violations-title capitalize">{{card.name}} Violations</div>
+        <div class="violations-title capitalize nowrap-ellipsis">{{card.name}} Violations</div>
         <div class="violations-count" (click)="redirect()">{{card.totalViolations}} <img src="/assets/icons/Path.svg" /></div>
       </div>
     </div>
     <hr width="100%" style="color: var(--border-200);">
-    <div class="violations-details-container">
-      <div class="violations-details-wrapper flex flex-row">
-        <div class="{{item}}-count flex flex-col" *ngFor="let item of getKeys(card.subInfo)">
-          <div class="name">{{ item }}</div>
+    <div class="violations-info-container">
+      <div class="violations-info-wrapper flex flex-row">
+        <div class="{{item}}-count flex flex-col violations-info" *ngFor="let item of getKeys(card.subInfo)">
+          <div class="name nowrap-ellipsis">{{ item }}</div>
           <div class="count">{{ card.subInfo[item] }}</div>
         </div>
       </div>
