--- a/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.css
+++ b/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.css
@@ -53,6 +53,8 @@
 
 .title-text {
   display: inline-block;
+  font: var(--text-headline-6);
+  color: var(--text-high-emphasis);
 }
 
 .arrow-img {
