--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -17,7 +17,7 @@
      </div>
     <div class="violations-header">
         <div class="flex flex-align-center">
-            <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+            <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" src="../assets/icons/left-arrow.svg">
             <!-- <h1 class="title-text nowrap-ellipsis">{{ breadcrumbPresent }}</h1> -->
             <span class="title">{{ breadcrumbPresent }}</span>
         </div>
