--- a/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.css
@@ -54,4 +54,9 @@
 .compliance-issues-container {
     padding-top: 20px;
 }
+
+.floating-widgets-header .title-text{
+    font: var(--text-headline-6);
+    color: var(--text-high-emphasis);
+}
 /*****************************************************************/
