--- a/webapp/src/app/pacman-features/modules/compliance/violations-card/violations-card.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/violations-card/violations-card.component.css
@@ -20,14 +20,16 @@
   gap: 16px;
 }
 
+.violations-content{
+  gap: 16px;
+  overflow: hidden;
+}
+
 .violations-content-container{
   gap: 16px;
 }
 
 .violations-content .violations-title{
-  /* overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap; */
   color: var(--text-high-emphasis);
   font: var(--text-body-2);
 }
@@ -39,24 +41,27 @@
 }
 
 .violations-content .violations-count img{
+  padding-bottom: 4px;
   filter: invert(46%) sepia(3%) saturate(1769%) hue-rotate(159deg) brightness(96%) contrast(85%);
 }
 
-.violations-details-wrapper .name{
-  /* overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap; */
+.violations-info{
+  gap: 8px;
+  overflow: hidden;
+}
+
+.violations-info-wrapper .name{
   font: var(--text-caption);
   font-family: var(--text-light-font-family);
   color: var(--text-medium-emphasis);
 }
 
-.violations-details-wrapper .count{
+.violations-info-wrapper .count{
   font: var(--text-headline-6);
   color: var(--text-medium-emphasis);
 }
 
-.violations-details-wrapper{
+.violations-info-wrapper{
   justify-content: space-between;
 }
 
