--- a/webapp/src/app/shared/date-selection/date-selection.component.html
+++ b/webapp/src/app/shared/date-selection/date-selection.component.html
@@ -2,14 +2,14 @@
     <mat-card-header style="padding: 16px 24px; height:auto">Custom Selection</mat-card-header>
     <mat-card-content style="padding: 20px 24px;">
     <div class="custom-selection-content-wrapper">
-        <span>From :</span>
+        <span style="white-space: nowrap;">From :</span>
         <app-dropdown [items]="years" (selected)="onSelectYear(fromDate, $event)" placeholder="Year"></app-dropdown>
-        <app-dropdown [items]="allMonths" (selected)="onSelectMonth(fromDate, $event)" placeholder="Month"></app-dropdown>
-        <app-dropdown [items]="allMonthDays" (selected)="onSelectDay(fromDate, $event)" placeholder="Date"></app-dropdown>
-        <span>To :</span>
+        <app-dropdown [items]="allMonths" (selected)="onSelectMonth(fromDate, $event, 'from')" placeholder="Month"></app-dropdown>
+        <app-dropdown [items]="fromDays" (selected)="onSelectDay(fromDate, $event)" placeholder="Date"></app-dropdown>
+        <span style="white-space: nowrap;">To :</span>
         <app-dropdown [items]="years" (selected)="onSelectYear(toDate, $event)" placeholder="Year"></app-dropdown>
-        <app-dropdown [items]="allMonths" (selected)="onSelectMonth(toDate, $event)" placeholder="Month"></app-dropdown>
-        <app-dropdown [items]="allMonthDays" (selected)="onSelectDay(toDate, $event)" placeholder="Date"></app-dropdown>
+        <app-dropdown [items]="allMonths" (selected)="onSelectMonth(toDate, $event, 'to')" placeholder="Month"></app-dropdown>
+        <app-dropdown [items]="toDays" (selected)="onSelectDay(toDate, $event)" placeholder="Date"></app-dropdown>
     </div>
     </mat-card-content>
     <mat-card-actions>
