--- a/webapp/src/app/shared/dropdown/dropdown.component.css
+++ b/webapp/src/app/shared/dropdown/dropdown.component.css
@@ -5,7 +5,7 @@
 }
 
 ::ng-deep .mat-select-panel{
-    margin-top: 20px !important;
+    /* margin-top: 20px !important; */
     width: 100% !important;
     margin-left: 15px !important;
 }
