--- a/webapp/src/app/shared/dropdown/dropdown.component.html
+++ b/webapp/src/app/shared/dropdown/dropdown.component.html
@@ -1,7 +1,7 @@
 <div class="dropdown-wrapper">
     <mat-form-field>
         <mat-label>{{placeholder}}</mat-label>
-        <mat-select disableOptionCentering (selectionChange)="selectedValue($event.value)" [(ngModel)]="selectedOption">
+        <mat-select disableOptionCentering (closed)="onClose()" (selectionChange)="selectedValue($event.value)" [(ngModel)]="selectedOption">
             <mat-option *ngFor="let item of itemList" [value]="item">
                 {{item}}
             </mat-option>
