--- a/webapp/src/app/post-login-app/stats-overlay/stats-overlay.component.html
+++ b/webapp/src/app/post-login-app/stats-overlay/stats-overlay.component.html
@@ -67,7 +67,7 @@
 				<article class="bottomSection flex flex-align-center" [ngClass]="{'bg-wrapper' : dataComing == true}">
 
 					<div class="events bottomsection-each" *ngIf='dataComing && !showLoader'>
-						<div class="events-text">Aws Accounts Scanned</div>
+						<div class="events-text">Accounts Scanned</div>
 						<div class="events-image-wrapper aws-account">
 							<img class="events-icon" src="../../../../assets/icons/AWS.svg">
 						</div>
