--- a/webapp/src/app/pacman-features/secondary-components/pacman-policy-violations/pacman-policy-violations.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/pacman-policy-violations/pacman-policy-violations.component.html
@@ -33,7 +33,7 @@
                         (searchRowTxt)='searchCalled($event)'
                         (searchTriggerred)='callNewSearch()'
                         (selectedRow)=' goToDetails($event)'
-                        [columnWhiteList]="[ 'Policy Name', 'Status', 'frequency']"
+                        [columnWhiteList]="[ 'Rule Name', 'Status', 'frequency']"
                         (headerColNameSelected)="handleHeaderColNameSelection($event)" 
                         [headerColName]="headerColName" [direction]="direction">
         </app-data-table>
