--- a/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
@@ -19,26 +19,26 @@
             <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
             <h1 class="title-text">{{pageTitle}}</h1>
         </div>
-        <div class='flex relative z-index'>
+        <!-- <div class='flex relative z-index'>
             <div class='drop-options'>
                 <app-searchable-dropdown *ngIf='filterTypeLabels.length' [firstDD]='true' (selection)='changeFilterType($event)' [placeholder]="'Select filter type'" [items]='filterTypeLabels'></app-searchable-dropdown>
             </div>
             <div class='drop-search-box'>
                 <app-searchable-dropdown (selection)='changeFilterTags($event)' [placeholder]="'Search filter tags'" [items]='filterTagLabels'></app-searchable-dropdown>
             </div>
-        </div>
+        </div> -->
     </div>
-    <div class='floating-widgets-filter-wrapper' *ngIf='filters.length'>
+    <!-- <div class='floating-widgets-filter-wrapper' *ngIf='filters.length'>
         <app-filtered-selector (deleteAllFilters)="deleteFilters($event)" (deleteFilter)="deleteFilters($event)" [(filteredArray)]="filters" [(mandatoryFilter)]="mandatory"></app-filtered-selector> 
        
 
-    </div>
+    </div> -->
     <div class="floating-widgets-container data-table-container">
         <section>
             <ul>
                 <li class="widget-wrapper relative">
                     <div class="relative">
-                        <app-data-table [searchTextValues]=searchTxt [showGenericMessage]='showGenericMessage' 
+                        <!-- <app-data-table [searchTextValues]=searchTxt [showGenericMessage]='showGenericMessage' 
                             [errorValue]='errorValue' [parentName]="'taggingTargetMessage'" [showingArr]='showingArr' 
                             [outerArr]='outerArr' [searchableHeader]='true' [allColumns]='allColumns' [dataHead]="'All Assets'" 
                             (selectedRow)='goToDetails($event)' [firstPaginator]='firstPaginator' [lastPaginator]='lastPaginator' 
@@ -46,7 +46,17 @@
                             (previousPageCalled)='prevPg()' (nextPageCalled)='nextPg()' (searchTriggerred)='callNewSearch()' 
                             [popRows]='popRows' (rowClickText)='handlePopClick($event)' (headerColNameSelected)="handleHeaderColNameSelection($event)" 
                             [headerColName]="headerColName" [direction]="direction" [searchPassed]='searchTxt'>
-                        </app-data-table>
+                        </app-data-table> -->
+                        <app-table style="height: 100%; width: 100%;" (rowSelectEventEmitter)="goToDetails($event)"
+                        [data]="tableData" [columnWidths]="columnWidths"
+                        [columnsSortFunctionMap]="columnsSortFunctionMap" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
+                        [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns" [tableTitle]="tableTitle"
+                        [imageDataMap]="tableImageDataMap" [showAddRemoveCol]="true" [showSearchBar]="true" (searchCalledEventEmitter)="callNewSearch($event)"
+                        [searchQuery]="searchTxt" (nextPageCalled)="nextPg()" (downloadClicked)="handlePopClick($event)" (selectedFilterType)='changeFilterType($event)'
+                        (selectedFilter)="changeFilterTags($event)" [filteredArray]="filters" [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
+                        (deleteFilters)="deleteFilters($event)" [filterTypeOptions]="filterTypeOptions" [tableErrorMessage]='tableErrorMessage'
+                        [showDownloadBtn]="showDownloadBtn" [showFilterBtn]="showFilterBtn" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows" (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
+                        [tableScrollTop]="tableScrollTop"></app-table>
                         <div class="data-table-desc">{{dataTableDesc}}</div>
                     </div>
                 </li>
